fix(image-info) #7: Add compatibilty of image EXIF with lazyload
- Enable consistent skeleton loading animations for EXIF-enhanced images
- Eliminate layout shifts by ensuring preloader placeholders perfectly match the final image dimensions
- Fix the layout of image loading error states

--- a/source/css/common/basic.styl
+++ b/source/css/common/basic.styl
@@ -150,6 +150,9 @@ a
       background var(--third-background-color)
       position relative
       height auto
+      padding 0.75rem
+      width 100%
+      box-sizing border-box
 
     .img-preloader-error-icon
       font-size 3rem
